<resources>
	<string name="app_name">Gods and Mages: Homecoming</string>
	<string name="button_chapters">Story Notes</string>
	<string name="action_settings">Settings</string>
	<string name="title_settings">Settings</string>
	
	<string name="title_activity_create_character">Create Character</string>
	<string name="name_entry_hint">Enter name…</string>
	<string name="insert_name">Insert Name:</string>
	<string name="race_selection">Choose Race:</string>
	<string name="class_selection">Choose Class:</string>
	<string name="job_selection">Choose Job:</string>
	
	<string name="title_theme">Select Theme</string>
	<string name="theme_light">Light</string>
	<string name="theme_dark">Dark</string>
	<string name="title_fullscreen">Fullscreen</string>
	<string name="noSave">Empty</string>
	<string name="title_delete">Manage Save Files</string>
	<string name="confirm_text">Are you sure?</string>
	<string name="title_about">About</string>
	<!--Add in about info-->
	<string name="info_about">Copyright Tad Bolmont</string>
	<string name="title_activity_game">GameActivity</string>
	<string name="section_format">Hello World from section: %1$d</string>
	<string name="title_inventory">Inventory</string>
	<string name="main_screen_title">Main</string>
	<string name="equip_title">Equip</string>
</resources>
