<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	
	<SwitchPreference
		android:defaultValue="false"
		android:name="pref_dark_theme"
		android:summaryOff="@string/theme_light"
		android:summaryOn="@string/theme_dark"
		android:switchTextOff="@string/theme_light"
		android:switchTextOn="@string/theme_dark"
		android:title="@string/title_theme"
		android:showText="true"/>
	<Preference
		android:title="@string/title_delete">
		<intent
			android:action="android.intent.action.VIEW"
			android:targetPackage="com.tadbolmont.homecoming"
			android:targetClass="com.tadbolmont.homecoming.ManageDataActivity"/>
	</Preference>
	<com.tadbolmont.homecoming.AboutDialog
		android:title="@string/title_about"
		/>
</PreferenceScreen>