<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:visibility="visible"
	tools:context="com.tadbolmont.homecoming.CreateCharacter">
	
	<Spinner
		android:id="@+id/job_spinner"
		android:layout_width="240dp"
		android:layout_height="45dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginTop="4dp"
		app:layout_constraintTop_toBottomOf="@+id/job_textView"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"/>
	
	<TextView
		android:id="@+id/job_textView"
		android:layout_width="197dp"
		android:layout_height="26dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginTop="16dp"
		android:text="@string/job_selection"
		android:textColor="@android:color/black"
		android:textSize="24sp"
		app:layout_constraintHorizontal_bias="0.149"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/class_spinner"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"/>
	
	<TextView
		android:id="@+id/class_class_textView"
		android:layout_width="197dp"
		android:layout_height="26dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginTop="16dp"
		android:text="@string/class_selection"
		android:textColor="@android:color/black"
		android:textSize="24sp"
		app:layout_constraintHorizontal_bias="0.149"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/race_spinner"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"/>
	
	<Spinner
		android:id="@+id/class_spinner"
		android:layout_width="240dp"
		android:layout_height="45dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginTop="4dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/class_class_textView"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"/>
	
	<EditText
		android:id="@+id/name_editText"
		android:layout_width="240dp"
		android:layout_height="45dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginTop="8dp"
		android:ems="10"
		android:hint="@string/name_entry_hint"
		android:inputType="textPersonName"
		android:textSize="18sp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/name_textView"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"/>
	
	<TextView
		android:id="@+id/name_textView"
		android:layout_width="200dp"
		android:layout_height="27dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginTop="64dp"
		android:text="@string/insert_name"
		android:textColor="@android:color/black"
		android:textSize="24sp"
		android:visibility="visible"
		app:layout_constraintHorizontal_bias="0.152"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"/>
	
	<Spinner
		android:id="@+id/race_spinner"
		android:layout_width="240dp"
		android:layout_height="45dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginTop="4dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/race_textView"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"/>
	
	<TextView
		android:id="@+id/race_textView"
		android:layout_width="197dp"
		android:layout_height="26dp"
		android:layout_marginLeft="8dp"
		android:layout_marginTop="16dp"
		android:text="@string/race_selection"
		android:textColor="@android:color/black"
		android:textSize="24sp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/name_editText"
		android:layout_marginRight="8dp"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintHorizontal_bias="0.163"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"/>
	
	<Button
		android:id="@+id/button"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="203dp"
		android:layout_height="57dp"
		android:layout_marginBottom="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginTop="8dp"
		android:background="@color/colorPrimaryDark"
		android:onClick="startGame"
		android:text="Start"
		android:textSize="18sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintHorizontal_bias="0.503"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/job_spinner"
		app:layout_constraintVertical_bias="0.17000002"/>

</android.support.constraint.ConstraintLayout>
